# github-repo-inventory

./: .env.example  .gitignore  README.md  config.yaml.example  pyproject.toml
.github/workflows/: inventory.yml
dashboard/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite-auth.ts  vite.config.ts
dashboard/scripts/: encrypt-inventory.mjs
dashboard/src/: App.tsx  cardFilters.ts  inventoryAccess.ts  savedViews.ts  staleness.ts  styles.css  types.ts
dashboard/src/components/: FilterBar.tsx  LoginGate.tsx  RepoTable.tsx  SummaryCards.tsx
docs/: architecture.md  authentication.md  fields.md
src/github_repo_inventory/: __init__.py  __main__.py  cli.py  collector.py  config.py  diff.py  export.py  github_client.py  models.py  scoring.py  security_status.py  storage.py
tests/: test_diff.py  test_export.py  test_github_client.py  test_scoring.py  test_security_status.py
